# Pigeon-Server-Bot-V3

./: .gitignore  .pdm-python  HISTORY.md  README.md  main.py  pyproject.toml  requirement.txt  requirements.txt  run_test.bat
.github/workflows/: python-test.yml
config/default/: config.json5  permission.json5  system_config.json5
request/: command.http  http-client.env.json  instance.http  output.http  overview.http  remote_services.http  remote_services_list.http
src/base/: config.py  event_bus.py  logger.py
src/bot/: App.py  app.py  command.py  database.py  mcsm.py  message.py  permission.py  plugin.py  server_status.py  thread.py  tools.py
src/bus/: base_bus.py  event_bus.py  event_callback_container.py  event_callback_factory.py
src/command/: block_word_command.py  command.py  command_manager.py  command_parser.py  command_parser_manager.py  mcsm_command.py  other_command.py  permission_command.py  server_list_command.py  server_status_command.py
src/database/: base_model.py  database.py  mcsm_model.py  message_model.py  punish_model.py  server_model.py  user_model.py
src/element/: command.py  message.py  permissions.py  response.py  result.py  tree.py
src/exception/: exception.py
src/filter/: message_filter.py
src/inject/: user_inject.py
src/model/: message_model.py  model.py
src/module/: block_message.py  blockmessage.py  command.py  confirm_message.py  database.py  json_database.py  json_database_class.py  mcsm_class.py  message.py  message_wordcloud.py  permission_manager.py  permission_node.py  permissions.py  reply_message.py  result.py  (+2 more)
(+43 files in other folders)
